--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,16 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "darkaonline/l5-swagger": "^8.0",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^6.5",
-        "infobip/infobip-api-php-client": "^3.0",
-        "laravel/framework": "^8.65",
-        "laravel/sanctum": "^2.12",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "laravel/framework": "^8.54",
+        "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.3",
-        "spatie/laravel-permission": "^5.3",
+        "predis/predis": "^1.1",
+        "samir-hussein/paymob": "^1.0",
+        "spatie/laravel-permission": "^4.2",
       "ext-curl": "*"
     },
     "require-dev": {
